Rapid Prd/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Time_Remaining_On_Lease__c</fullName>
        <label>Time Remaining On Site Lease/Mortgage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Merchants_In_Portfolio__c</fullName>
        <inlineHelpText>Enter the total number of merchants in the acquirer&apos;s / ISO portfolio.</inlineHelpText>
        <label>Total Merchants In Portfolio</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Partner_s_Sales_Reps__c</fullName>
        <label>Total Number of Partner&apos;s Sales Reps</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Member_Email__c</fullName>
        <label>Transfer Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Transfer_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Member Name</label>
        <referenceTo>Transfer_Member__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tri_Fold_Brochure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tri-Fold Brochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_contract_sent__c</fullName>
        <label>Type of contract sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard 12N</fullName>
                </value>
                <value>
                    <fullName>Standard 12G</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Types_of_AF_Programs_your_Company_Offers__c</fullName>
        <label>Types of AF Programs your Company Offers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_funded_per_month__c</fullName>
        <label>Units funded per month?</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Language__c</fullName>
        <label>Upsell Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Mailing_Address_in_Correspondence__c</fullName>
        <label>Use Mailing Address in Correspondence?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>W9_Form_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used by Client Referrals functionality to track if W9 has been submitted if the number of referrals are more  than 1</description>
        <label>W9 Form Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_9_Form_Received__c</fullName>
        <label>W-9 Form Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Executed_Contract_Sent__c</fullName>
        <label>Welcome Package Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_Are_You_Looking_for_in_an_AF_Comp__c</fullName>
        <label>What Are You Looking for in an AF Comp?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_Services_Products_Do_You_Provide__c</fullName>
        <label>What Services/Products Do You Provide?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_Avg_Deal_Size__c</fullName>
        <label>What is the Avg Deal Size?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-5k</fullName>
                </value>
                <value>
                    <fullName>5k-15k</fullName>
                </value>
                <value>
                    <fullName>15k-25k</fullName>
                </value>
                <value>
                    <fullName>25k+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_submission_process__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>What is your submission process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_marketing_support_needed__c</fullName>
        <label>What marketing support needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_expected_to_start_submitting__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>When expected to start submitting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Closes_The_Deal__c</fullName>
        <label>Who Closes The Deal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISO Agent</fullName>
                </value>
                <value>
                    <fullName>RapidAdvance</fullName>
                </value>
                <value>
                    <fullName>ISO Agent – AE assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_RapidAdvance__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Why RapidAdvance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Date__c</fullName>
        <label>Write Off Date</label>
        <summarizedField>Opportunity.Write_Off_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X4_Month_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Month Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_Current_Conversion_Rate__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Your Current Conversion Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Experience_in_this_Industry__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Your Experience in this Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_footprint_local_regional_national__c</fullName>
        <label>Your footprint local, regional, national</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_future_growth_plans__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Your future growth plans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_likes_dislikes_about_other_Funders__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Your likes/dislikes about other Funders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_likes_dislikes_about_our_Industry__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Your likes/dislikes about our Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>linkshare_flag__c</fullName>
        <label>linkshare flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>missing_opportunity_id__c</fullName>
        <label>missing opportunity id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renewal_count__c</fullName>
        <label>renewal count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Addon_Oppy__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tracking_sanaa__c</fullName>
        <label>tracking sanaa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Identification_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Base Rate</label>
    </listViews>
    <listViews>
        <fullName>BusDev01ContractstoSend</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/21/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Merchant Acquirer,Processor</value>
        </filters>
        <label>BusDev01 - Contracts to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev03WelcomePackagestoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev03 - Welcome Packages to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev04GoToMtgTrainingstoComplete</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>GoToMtg_Training_Complete__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/21/2012 12:00 AM</value>
        </filters>
        <label>BusDev04 - GoToMtg Trainings to Complete</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev05WiringInstructstoCollect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Partner_Bank_Wiring_Instructions__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev05 - Wiring Instructs to Collect</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev06W9FormstoCollect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>W_9_Form_Received__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev06 - W-9 Forms to Collect</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev07CalculatorstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Who_Closes_The_Deal__c</field>
            <operation>equals</operation>
            <value>ISO Agent</value>
        </filters>
        <filters>
            <field>Calculator_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev07 - Calculators to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev08PrtnrforceTutorialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Partnerforce_Tutorial_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev08 - Prtnrforce Tutorials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev09CrystalRepTutorialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CrystalReports_com_Tutorial_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev09 - CrystalRep Tutorials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev10PartnerSetUpstoComplete</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Business_Development_Process_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev10 - Partner Set Ups to Complete</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev11MarketingMaterialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>GoToMtg_Training_Complete__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Marketing_Materials_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev11 - Marketing Materials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerIDListing</fullName>
        <columns>Customer_Identification_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>Customer ID Listing</label>
    </listViews>
    <listViews>
        <fullName>Fleischmann_Contracts_Received</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fleischmann Contracts Received</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleischmann_ContractstoReceive</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fleischmann Contracts to Receive</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleischmann_WIP_Agreement_Not_Sent</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Email_Address__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>athom</value>
        </filters>
        <label>Fleischmann WIP, Agreement Not Sent</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partners</fullName>
        <active>true</active>
        <label>Partners</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fed_Tax_ID_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN (FederalTaxID__c) &lt; 9, LEN (FederalTaxID__c) &gt; 0,
$RecordType.Id =&quot;0125000000099aj&quot;)</errorConditionFormula>
        <errorDisplayField>FederalTaxID__c</errorDisplayField>
        <errorMessage>Federal Tax ID number must be a 9 digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerChannel_Field_Update_Restriction</fullName>
        <active>true</active>
        <description>Partner Channel Field for Record Type &quot;Partners&quot; can only be updated by listed users: Mark Cerminaro and Alex Matini</description>
        <errorConditionFormula>AND(ISCHANGED(Partner_Channel__c), NOT(OR($User.Alias = &apos;MCERM&apos;, $User.Alias = &apos;amati&apos;, $Profile.Name = &apos;System Administrator&apos;)), NOT(ISBLANK(PRIORVALUE(Partner_Channel__c))))</errorConditionFormula>
        <errorDisplayField>Partner_Channel__c</errorDisplayField>
        <errorMessage>You do not have required permission to change this field. Please contact System Administrator to get the changes done.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneExtOnlyText</fullName>
        <active>true</active>
        <description>Will ascertain that users enter only numbers for  this field.</description>
        <errorConditionFormula>IF(ISBLANK( Phone_Ext__c ), false, (IF(ISNUMBER(Phone_Ext__c),false,true)))</errorConditionFormula>
        <errorDisplayField>Phone_Ext__c</errorDisplayField>
        <errorMessage>Please enter numbers only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Name_Abbreviation</fullName>
        <active>true</active>
        <description>The State Name must be in the standard 2 letter Postal Abbreviation.</description>
        <errorConditionFormula>AND ( 
NOT( $Profile.Name = &quot;System Administrator&quot;),
         NOT($UserRole.Name = &quot;Administrator&quot;), 
NOT(ISNEW()), 
OR( BillingCountry = &quot;US&quot;, BillingCountry =&quot;USA&quot;, ISBLANK( BillingCountry )), 
NOT( 
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp; 
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot;&amp; 
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp; 
&quot;WA:WV:WI:WY&quot;, BillingState ) 
))</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>You must enter the standard 2 letter Postal Abbreviation for States within the U.S.</errorMessage>
    </validationRules>
</CustomObject>